# hoomd-oxDNA

./: .gitignore  CMakeLists.txt  README.md
bench/: benchmark.py
examples/: oxdna_tour.ipynb  trna_folding.ipynb
oxdna/: __init__.py  forces.py  io.py
oxdna/model/: __init__.py  dna1.py  dna2.py  rna2.py
pytest/: CMakeLists.txt  _helpers.py  conftest.py  test_coaxstacking.py  test_crossstacking.py  test_excvol.py  test_fene.py  test_fene_fd.py  test_fused.py  test_hbond.py  test_oxdna1_full.py  test_oxdna2.py  test_rna2.py  test_stacking.py
src/: AnisoPotentialPairOxDNACoaxStacking.cc  AnisoPotentialPairOxDNACoaxStackingGPU.cc  AnisoPotentialPairOxDNACoaxStackingGPUKernel.cu  AnisoPotentialPairOxDNACrossStacking.cc  AnisoPotentialPairOxDNACrossStackingGPU.cc  AnisoPotentialPairOxDNACrossStackingGPUKernel.cu  AnisoPotentialPairOxDNADebye.cc  AnisoPotentialPairOxDNADebyeGPU.cc  AnisoPotentialPairOxDNADebyeGPUKernel.cu  AnisoPotentialPairOxDNAExcVol.cc  AnisoPotentialPairOxDNAExcVolGPU.cc  AnisoPotentialPairOxDNAExcVolGPUKernel.cu  AnisoPotentialPairOxDNAHBond.cc  AnisoPotentialPairOxDNAHBondCross.cc  AnisoPotentialPairOxDNAHBondCrossGPU.cc  AnisoPotentialPairOxDNAHBondCrossGPUKernel.cu  AnisoPotentialPairOxDNAHBondGPU.cc  AnisoPotentialPairOxDNAHBondGPUKernel.cu  CMakeLists.txt  EvaluatorPairOxDNACoaxStacking.h  EvaluatorPairOxDNACrossStacking.h  EvaluatorPairOxDNADebye.h  EvaluatorPairOxDNAExcVol.h  EvaluatorPairOxDNAHBond.h  EvaluatorPairOxDNAHBondCross.h  OxDNAAnisoPair.h  OxDNABaseBase.h  OxDNABondedForceCompute.cc  OxDNABondedForceCompute.h  OxDNABondedForceComputeGPU.cc  OxDNABondedForceComputeGPU.h  OxDNABondedGPU.cu  OxDNABondedGPU.cuh  OxDNABondedKernel.h  OxDNABondedParams.h  OxDNANumerics.h  OxDNAParamIO.h  module.cc
